<resources>
    <string name="app_name">UTS HELPS</string>
    <string name="title_landing">Hi, Steve Jobs</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_waiting_list">Waiting List</string>
    <string name="title_reminders">Notifications</string>
    <string name="title_upcoming_sessions">Upcoming Workshop</string>
    <string name="title_history">Booking History</string>
    <string name="title_about">Other Programs</string>
    <string name="title_account">Profile</string>
    <string name="title_register">Register</string>
    <string name="title_workshop_details">Workshop Details</string>
    <string name="title_check_attendance">Check Attendance</string>
    <string name="title_faq">FAQ</string>
    <string name="title_home">Home</string>
    <string name="title_update_student">Update Student</string>
    <string name="title_button_book">Book Workshop</string>
    <string name="title_button_cancel_booking">Cancel Booking</string>
    <string name="title_button_check_attendance">Record Attendance</string>
    <string name="header_booking_list">SELECT BOOKING FOR\nMORE DETAILS</string>
    <string name="header_waiting_list">SELECT WAITING LIST WORKSHOP FOR MORE DETAILS</string>
    <string name="header_history_list">PREVIOUSLY ATTENDED WORKSHOPS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="navigation_email_ending">\@student.uts.edu.au</string>
    <string name="attendance_message">Your attendance has been recorded</string>
    <string name="preffered_name">Preferred Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="first_language">First Language</string>
    <string name="country_of_origin">Country of Origin</string>
    <string name="student_id">Student ID</string>
    <string name="gender">Gender</string>
    <string name="degree">Degree</string>
    <string name="status">Status</string>
    <string name="edit_details">Edit Details</string>
    <string name="logout">Logout</string>
    <string name="prompt_student_id">StudentID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_register">REGISTER</string>
    <string name="prompt_preferred_name">Preferred Name</string>
    <string name="prompt_dob">Date of Birth</string>
    <string name="prompt_day">Day</string>
    <string name="prompt_month">Month</string>
    <string name="prompt_year">Year</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_degree">Degree</string>
    <string name="prompt_status">Status</string>
    <string name="prompt_first_language">First Language</string>
    <string name="prompt_origin_country">Country of Origin</string>
    <string name="register_button">Create Account</string>
    <string name="register_form_label">Register Form</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="question">First time using HELPS?</string>
    <string name="error_invalid_student_id">This studentID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="degree_undergraduate">Undergraduate</string>
    <string name="degree_postgraduate">Postgraduate</string>
    <string name="status_international">International</string>
    <string name="status_permanent">Permanent</string>
    <string name="upcoming_sessions_search">Search</string>
    <string name="search_result_title">Search Results</string>
    <string name="prompt_search_topic">Topic</string>
    <string name="title_faq_helps_program">\t\t\t\t\t\tHelps Program</string>
    <string name="title_faq_helps_program_no_tab">Helps Program</string>
    <string name="title_faq_helps_program_question_use">Who can use HELPS?</string>
    <string name="title_faq_helps_program_question_where">Where is HELPS?</string>
    <string name="title_faq_helps_program_question_cost">How much does it cost?</string>
    <string name="title_faq_helps_program_question_assignment">Can you help me with my assignments?</string>
    <string name="title_faq_helps_program_question_c_assignment">Can you proofread and correct my assignment?</string>
    <string name="title_faq_helps_program_question_h_assignment">Can you help me with the content of my assignment?</string>
    <string name="title_faq_helps_program_question_grammar">My lecturer says I need to improve my grammar. Can you help me?</string>
    <string name="title_faq_helps_program_question_pronunciation">Can you help me with my pronunciation?</string>
    <string name="title_faq_helps_program_question_presentation">Can I practise my seminar presentation with someone?</string>
    <string name="title_faq_helps_program_answer_use">Any student enrolled in any faculty at UTS, and all members of UTS staff</string>
    <string name="title_faq_helps_program_answer_where">HELPS is located on Building 1, Level 3 , room 8 (opposite the Careers service)</string>
    <string name="title_faq_helps_program_answer_cost">Services are free of tuition fees for non-credit workshops and individual consultations.</string>
    <string name="title_faq_helps_program_answer_assignment">
        Yes. HELPS offers various workshops and individual consultations. See our variety of programs for extra assistance under ‘Other Programs’
    </string>
    <string name="title_faq_helps_program_answer_c_assignment">
        No. Our role is not to correct grammar or other errors in an assignment. We can help you develop your own editing strategies. You should also use a computer spell-check, find a competent friend and a good dictionary.
    </string>
    <string name="title_faq_helps_program_answer_h_assignment">
        No. We can’t tell you what to say, we can only help you say it better and more clearly. While we’re happy to act as a sounding board for your ideas, content questions require the specialised disciplinary knowledge of lecturers and tutors in your faculty. You should take specific content questions directly to them.
    </string>
    <string name="title_faq_helps_program_answer_grammar">
        Yes. You can arrange a drop-in consultation or one-on-one consultation for us to help you out. For more information, go to ‘Other Programs’ in this app.
    </string>
    <string name="title_faq_helps_program_answer_pronunciation">
        Yes.  You can arrange a drop-in consultation or one-on-one consultation for us to help you out. For more information, go to ‘Other Programs’ in this app.
    </string>
    <string name="title_faq_helps_program_answer_presentation">
        Yes. You can arrange a drop-in consultation or one-on-one consultation for us to help you out. For more information, go to ‘Other Programs’ in this app.
    </string>
    <string name="title_faq_exam">\t\t\t\t\t\tExam Special Conditions</string>
    <string name="title_faq_exam_no_tab">Exam Special Conditions</string>
    <string name="title_faq_exam_native_question">I am not a native English speaker and I feel that I need more time in exams. Can you help?</string>
    <string name="title_faq_exam_special_question">I\'m a second/third year student. Can I get Special Conditions in my exams?</string>
    <string name="title_faq_exam_deadline_question">What is the deadline to apply for the Special Conditions?</string>
    <string name="title_faq_exam_apply_question">How so I apply for Special Conditions in Exams?</string>
    <string name="title_faq_exam_native_answer">It depends. You might be eligible to apply for Special Conditions in Exams.</string>
    <string name="title_faq_exam_special_answer">No. Only first year (1st/2nd semester) students are eligible to apply.</string>
    <string name="title_faq_exam_deadline_answer">The applications close on the <string name="census_link"><a href="http://www.uts.edu.au/current-students/managing-your-course/important-dates/census-date">Census date</a></string>
    <string name="title_faq_exam_apply_answer">You would need to fill out an application form and submit it to the HELPS office (CB01.05.205). The application form and more can be found <string name="application_link"><a href="https://www.uts.edu.au/current-students/support/helps/special-conditions-exams-students-non-english-speaking-backgrounds">here</a></string>
    <string name="title_faq_misc">\t\t\t\t\t\tMiscellaneous</string>
    <string name="title_faq_misc_no_tab">Miscellaneous</string>
    <string name="title_faq_misc_what_question">What is HELPS?</string>
    <string name="title_faq_misc_consider_question">Why should I consider using HELPS?</string>
    <string name="title_faq_misc_office_question">Where is your main office located?</string>
    <string name="title_faq_misc_team_question">I\'m interested in being part of the HELPS team. Can I sign up  in any way?</string>
    <string name="title_faq_misc_help_question">My question isn\'t answered here. Can someone help me out?</string>
    <string name="title_faq_misc_what_answer">
        Higher Education Language and Presentation Support (HELPS) provides non-credited English language and academic literacy support for UTS undergraduate and postgraduate coursework students
    </string>
    <string name="title_other_drop_in_text1">
        We offer 15-minute drop-on advice sessions and 40-minute one-to-one consultations by referral to help you with your assignment writing and preparation.\n\nDrop-in consultations are held at:\n\n2016 Spring Semester (Not offered on Public Holidays)
    </string>
    <string name="title_other_drop_in_text2">
        &#9658; HELPS office (CB01.05.25)\nMonday to Thursday: 12noon - 6pm / Friday: 12noon - 5pm\n\n
        &#9658; UTS Blake Library (Research helpdesk)\nMonday to Thursday: 4pm - 7pm / Saturday: 1pm - 4pm\n\n
        &#9658; Building 10 Foyer (Pod 1)\nMonday to Thursday: 10am - 1pm
    </string>
    <string name="title_other_drop_in_text3">
        At the initial stage of your assignment writing or preparation process, you are strongly encouraged to come and see HELPS. The best time to see us is when you first receive your assignment.\n\nHELPS Advisors can help edit your assignment WITH you, not FOR you - helping you to edit for:
    </string>
    <string name="title_other_drop_in_text4">
        &#9658; Structure and argument – that your writing is logically organised with well-developed and well-supported arguments.\n\n
        &#9658; Style and expression – that your choice of vocabulary is appropriate, sentences are well constructed, ideas are clearly introduced, and paragraphs are fully developed.\n\n
        &#9658; Grammar – that your issues are identified and explained so you can learn from your mistakes and avoid making them in the future.
    </string>
    <string name="title_other_drop_in_text5">Proof reading is the final step in the editing process, with the aim of producing an error-free assignment. It is your responsibility to check for mistakes in spelling, punctuation, typing and formatting in your assignment before you submit it to your lecturer.\n\nFor more information, go to <string name="my_link"><a href="https://www.uts.edu.au/current-students/support/helps/assignment-writing-assistance">this</a></string>
</resources>