<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_bookings" />
        <item
            android:id="@+id/nav_upcoming_sessions"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_upcoming_sessions" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_reminders" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_history" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/title_account" />
        <item
            android:id="@+id/nav_workshop_details"
            android:visible="false"
            android:title="WorkshopDetails" />
        <item
            android:id="@+id/nav_register"
            android:visible="false"
            android:title="Register" />
        <item
            android:id="@+id/nav_check_attendance"
            android:visible="false"
            android:title="CheckAttendance" />
    </group>

    <item android:title="Additional Information">
        <menu>
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_faq" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_about" />

        </menu>
    </item>

</menu>
